bk_ida/gccida/c0/do_compile
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compile/src/toplev.c:5669:16: error: use of undeclared identifier 'TV_TOTAL_0'; did you mean 'TV_TOTAL'?
timevar_start( TV_TOTAL_0); 
               ^~~~~~~~~~
               TV_TOTAL
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compile/src/timevar.def:34:13: note: 'TV_TOTAL' declared here
DEFTIMEVAR (TV_TOTAL                 , "total time")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compile/src/toplev.c:5674:15: error: use of undeclared identifier 'TV_TOTAL_0'; did you mean 'TV_TOTAL'?
timevar_stop( TV_TOTAL_0); 
              ^~~~~~~~~~
              TV_TOTAL
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compile/src/timevar.def:34:13: note: 'TV_TOTAL' declared here
DEFTIMEVAR (TV_TOTAL                 , "total time")
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compile/src/obj/toplev.o] Error 1
